# eso-opas

./: .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  eso-opas.code-workspace  k8s-job-orchestration.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  performance.yaml
.github/workflows/: deploy.yml
backend/: Dockerfile  Makefile  pyproject.toml
backend/api/: config.py  main.py
backend/api/models/: process.py  upload.py
backend/api/services/: process.py  upload.py
backend/api/views/: process.py  upload.py
backend/tie/: Dockerfile  ToolConfiguration.md  generate_instructions_component.py  patch_dockerfile.py  processing.py
frontend/: .eslintrc-auto-import.json  package-lock.json  package.json
frontend/src/: auto-imports.d.ts  models.ts
frontend/src/boot/: i18n.ts
frontend/src/components/: AppToolbar.vue  InstructionsCard.vue  UploadForm.vue
frontend/src/envi_bil_reader/: header.ts  image.ts  models.ts
frontend/src/envi_image_reader/: image.ts
frontend/src/i18n/en/: index.ts
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: IndexPage.vue
frontend/src/stores/: enviImages.ts  header.ts  headers.ts
k8s-local/: README.md  namespace.yaml  pvc.yaml  rbac.yaml
