[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    { name = "Son Pham-Ba", email = "son.phamba@epfl.ch" },
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi>=0.115.14",
    "uvicorn>=0.35.0",
    "networkx>=3.5",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "fastapi-cache2>=0.2.2",
    "aiofiles>=25.1.0",
    "python-multipart>=0.0.20",
    "kubernetes>=32.0.0",
    "docker>=7.1.0",
    "jinja2>=3.1.2",
]

[project.optional-dependencies]
dev = [
    "dotenv>=0.9.9",
    "pytest>=8.4.1",
    "python-dotenv[cli]>=1.1.1",
    "docker>=7.1.0",
]
test = [
    "pytest>=8.4.1",
]

[tool.setuptools]
packages = ["api"]

[tool.ruff]
line-length = 120
preview = true

[tool.codespell]
skip = 'uv.lock'
